@@ -4,6 +4,9 @@ Changelog
 3.0a1 - unreleased
 ------------------
 
+* Avoid an extra unindex scan for determining length changes in index_object.
+  [hannosch]
+
 * Declared support for new ILimitedResultIndex interface and require at least
   Zope 2.13.0a3.
   [hannosch]
